--- a/pages/posts/gsoc-23-writeup.mdx
+++ b/pages/posts/gsoc-23-writeup.mdx
@@ -1,5 +1,5 @@
 export const meta = {
-  title: 'GSoC 2023: VVC Decoder Improvements',
+  title: 'GSoC 2023: FFmpeg VVC Decoder Improvements',
   datePublished: '2023-08-27',
   dateModified: '2023-08-29',
   author: 'Frank Plowman'
